add log_in, sign_up and reset_password pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,7 @@ en:
     log_out: 'Log out'
     log_in: 'Log in'
     my_account: 'My account'
+    sign_up: 'Sign up'
+    back_to_store: "Back to Store"
+    forgot_password: "Forgot password?"
+    resend_passwd_instruction: "Send me reset password instructions"
