fix join_table_author_books, add associations and dependency, add book controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,3 +42,12 @@ en:
     type_new_passwd: "Type a new Password"
     confirm_passwd: "Confirm Password"
     change: "Change"
+
+  number:
+    currency:
+       format:
+         unit: '€'
+         delimiter: ','
+         separator: '.'
+         precision: 2
+         format: '%u%n'
