can add/remoce items to/from cart

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,3 +76,9 @@ en:
     quantity: 'Quantity'
     subtotal: 'SubTotal'
     checkout: 'Checkout'
+    coupon: 'Enter Your Coupon Code'
+    apply_coupon: 'Apply Coupon'
+    update: 'Update cart'
+    summary: 'Order Summary'
+    coupon: 'Coupon'
+    total: 'Order Total'
