add addresses form, ability to change e-mail and password as user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -90,3 +90,24 @@ en:
     write: 'Write a Review'
     thanks_message: 'Thanks for Review. It will be published as soon as Admin will approve it.'
     smth_went_wrong: 'Something went wrong.'
+
+  settings:
+    settings: 'Settings'
+    address: 'Address'
+    privacy: 'Privacy'
+    billing: 'Billing Address'
+    shipping: 'Shipping Address'
+    use_billing: 'Use Billing Adress'
+    save: 'Save'
+    e-mail: 'Email'
+    enter_e-mail: 'Enter Email'
+    enter_your_e-mail: 'Enter your email'
+    password: 'Password'
+    old_password: 'Old Password'
+    new_password: 'New Password'
+    confirm_password: 'Confirm Password'
+    remove_account: 'Remove Account'
+    please_remove_account: 'Please Remove My Account'
+    im_agree_lost_all_data: 'I understand that all data will be lost'
+  user:
+    seccess_updating_email: 'E-mail was successfully updated.'
