add rake tasks (seed Coupons and Deliveries types), finished second step of checkout

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,3 +130,10 @@ en:
       delivered: 'Delivered'
       canceled: 'Cenceled'
       all: 'All Orders'
+
+  delivery:
+    delivery_method: 'Shipping Method'
+    method: 'Method'
+    days: 'Days'
+    price: 'Price'
+
