--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -137,3 +137,5 @@ en:
     days: 'Days'
     price: 'Price'
 
+  credit_card:
+    tooltip: '3-digit security code, usually found on the back of your card. American Express cards has 4-digit code, located on the front'
