add subtotal_item to order

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -147,3 +147,5 @@ en:
     paymant: 'Payment'
     confirm: 'Confirm'
     complete: 'Complete'
+    shipping: 'Shipping'
+    item_total: 'Item Total'
