--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,15 +1,3 @@
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-
 en:
   button:
     home: 'Home'
@@ -149,3 +137,10 @@ en:
     complete: 'Complete'
     shipping: 'Shipping'
     item_total: 'Item Total'
+  complete:
+    order: 'Order'
+    thanks: 'Thank You for your Order!'
+    has_been_sent_to: 'An order confirmation has been sent to '
+    book: 'Book'
+  date:
+   month_names: [nil, 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']
