redone upplying coupon from Ajax to rails redirect

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -144,3 +144,7 @@ en:
     book: 'Book'
   date:
    month_names: [nil, 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']
+
+  flash:
+    coupon_applied: 'Coupon was successfully applied'
+    fake_coupon: 'Unavailable coupon, please try another'
