add links to footer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,6 +59,7 @@ en:
       index:
         by_category: 'Filter by category'
         sort_by: 'Sort by'
+        catalog: 'Catalog'
   cart:
     cart: 'Cart'
     product: 'Product'
