split settings into two pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -150,3 +150,5 @@ en:
   flash:
     coupon_applied: 'Coupon was successfully applied'
     fake_coupon: 'Unavailable coupon, please try another'
+  notice:
+    wrong_password: 'Please enter correct password'
