add feature test on Home page, add translations, add rake task for order_statuses

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,7 @@ en:
     hight_to_low: 'Price: Hight to low'
     title_A-Z: 'Title A - Z'
     title_Z-A: 'Title Z - A'
+    get_started: 'Get Started'
 
   header:
     logo: 'Bookstore'
