add feature tests for Review, as loged_in user I can post review

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,7 @@ en:
     title_A-Z: 'Title A - Z'
     title_Z-A: 'Title Z - A'
     get_started: 'Get Started'
+    post: 'Post'
 
   header:
     logo: 'Bookstore'
