add custom method for redirect_back, remake review from js to pure rails

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,6 +82,7 @@ en:
     write: 'Write a Review'
     thanks_message: 'Thanks for Review. It will be published as soon as Admin will approve it.'
     smth_went_wrong: 'Something went wrong.'
+    score: 'Score'
 
   settings:
     settings: 'Settings'
