as user I can change my email and password, add flash types

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,6 +110,7 @@ en:
     country_select: 'Select a country'
   user:
     seccess_updating_email: 'E-mail was successfully updated.'
+    updated: 'Data was successfully updated'
   order:
     my_orders: 'My Orders'
     number: 'Number'
