improve mailer, add view for mailer, do refactoring in OrderItems controller, fixed up remove button in shopping cart

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -180,3 +180,9 @@ en:
     cart_number: 'Please enter a valid credit card number'
     cart_name: 'Allow only letters'
     mm_yy: 'Mons can be from 01 to 12'
+
+  mailer:
+    email: 'Your email:'
+    password: 'Your password:'
+    thanks: 'Thank you!'
+    subject: 'Welcome to BookStore'
